--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body class="bt-30">
+<body>
 
   <!-- Header Section Starts -->
   <header class="shadow-sm">
@@ -63,33 +63,57 @@
     </div>
   </header>
   <!-- Header Section Ends -->
-  <main class="d-flex justify-content-center align-items-center vh-100">
-    <div class="container">
-        <div class="row">
+  <main>
+    <section>
+      <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="container">
+          <div class="row">
             <!-- Left Div -->
             <div class="col-md-6 col-sm-12">
-                <div class="p-4">
-                    <p class="fw-bold custom-bg">Design Development Marketing</p>
-                    <p class="text-dark">I can help your business to</p>
-                    <h2 class="cs-design">Get Online and grow fast</h2>
-                    <div class="mt-5 row">
-                        <button class="btn-left col-6 fw-bold">Resume</button>
-                        <button class="btn-right col-6 fw-bold">Projects</button>
-                    </div>
+              <div class="p-4">
+                <p class="fw-bold custom-bg">Design Development Marketing</p>
+                <p class="text-dark">I can help your business to</p>
+                <h2 class="cs-design">Get Online and grow fast</h2>
+                <div class="mt-5 row">
+                  <button class="btn-left col-6 fw-bold">Resume</button>
+                  <button class="btn-right col-6 fw-bold">Projects</button>
                 </div>
+              </div>
             </div>
             <!-- Right Div -->
-            <div class="col-md-6 col-sm-12">
-                <div class="p-4">
-                    <h4>Right Div</h4>
-                    <p>This is the content of the right div.</p>
-                </div>
+            <div class="col-md-6 col-sm-12 text-right">
+              <div class="gradient-box">
+                <img src="/assets/images/profile.png" alt="profile-pic">
+              </div>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
+    </section>
+    <section class="bg-custom p-5">
+      <div class="container text-center">
+        <h2 class="cs-design fw-bolder">About Me</h2>
+        <p class="text-dark">My name is StartBootstrap and Grow you business</p>
+        <h6>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid eveniet exercitationem deleniti optio nam, voluptatum ipsam error amet natus sequi assumenda cumque mollitia dolorem sunt quod alias, molestiae aliquam eius?</h6>
+        <div class="icon-section d-flex justify-content-center align-items-center mt-3">
+          <a href="#"><i class="fa-brands fa-twitter me-2 fs-4 cs-design"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram me-2 fs-4 cs-design"></i></a>
+          <a href="https://github.com/jobayer-alam-24" target="_blank"><i class="fa-brands fa-github fs-4 cs-design"></i></a>
+        </div>
+      </div>
+    </section>
   </main>
 
-
+  <footer>
+    <div class="container p-2 mt-2 d-flex justify-content-between">
+      <p>copyright &copy; StartBootstrap - 2024</p>
+      <div class="foot-url">
+        <a href="#">Privacy - </a>
+        <a href="#">Terms - </a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
+  </footer>
 
 
   <!-- Jquery CDN -->
