--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- Right Div -->
             <div class="col-md-6 col-sm-12 text-right">
               <div class="gradient-box">
-                <img src="/assets/images/profile.png" alt="profile-pic">
+                <img src="./assets/images/profile.png" alt="profile-pic">
               </div>
             </div>
           </div>
