--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section class="bg-custom p-5">
       <div class="container text-center">
         <h2 class="cs-design fw-bolder">About Me</h2>
-        <p class="text-dark">My name is StartBootstrap and Grow you business</p>
+        <p class="text-dark">My name is StartBootstrap and Grow your business</p>
         <h6>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid eveniet exercitationem deleniti optio nam, voluptatum ipsam error amet natus sequi assumenda cumque mollitia dolorem sunt quod alias, molestiae aliquam eius?</h6>
         <div class="icon-section d-flex justify-content-center align-items-center mt-3">
           <a href="#"><i class="fa-brands fa-twitter me-2 fs-4 cs-design"></i></a>
