--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: rgba(243, 246, 246, 0.78);">
 
   <!-- Header Section Starts -->
   <header class="shadow-sm">
@@ -64,7 +64,41 @@
   </header>
   <!-- Header Section Ends -->
   <main>
-    
+    <section>
+      <div class="container p-3">
+        <h1 class="text-center mt-4 cs-design">Resume</h1>
+        <div class="resume-outer p-4 w-75 mx-auto mt-3">
+          <div class="resume-header d-flex justify-content-between">
+            <h3 class="blue-head">Experience</h3>
+            <div class="down-resume">
+              <a href="#">
+                <button class="down-btn">
+                  <i class="fa-solid fa-download "></i>
+                  Download Resume
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container custom-width card mx-auto">
+        <div class="card-body d-flex">
+            <div class="left-side p-3 me-4">
+                <div class="cs-bg p-3">
+                  <h6 class="blue-head fw-bold m-0 mb-2">2019 - Present</h6>
+                  <b>Web Developer</b>
+                  <p class="m-0 mt-0">Stack Industries
+                  <p class="m-0 mt-0">Los Angles C.A</p>
+                </div>
+            </div>
+            <div class="right-side p-3 d-flex align-items-center ">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus vero architecto voluptatem vitae error commodi. Quasi totam quos obcaecati consequatur vitae architecto labore neque doloribus suscipit nobis quam, similique ducimus?</p>
+            </div>
+        </div>
+    </div>
+    </section>
   </main>
 
   <footer>
