--- a/resume.html
+++ b/resume.html
@@ -83,25 +83,106 @@
       </div>
     </section>
     <section>
-      <div class="container custom-width card mx-auto">
-        <div class="card-body d-flex">
+      <div class="card-container-outer mx-auto custom-width">
+        <!-- card 1 start -->
+        <div class="container card">
+          <div class="card-body d-flex">
             <div class="left-side p-3 me-4">
-                <div class="cs-bg p-3">
-                  <h6 class="blue-head fw-bold m-0 mb-2">2019 - Present</h6>
-                  <b>Web Developer</b>
-                  <p class="m-0 mt-0">Stack Industries
-                  <p class="m-0 mt-0">Los Angles C.A</p>
-                </div>
+              <div class="cs-bg p-3">
+                <h6 class="blue-head fw-bold m-0 mb-2">2019 - Present</h6>
+                <b>Web Developer</b>
+                <p class="m-0 mt-0">Stack Industries</p>
+                <p class="m-0 mt-0">Los Angles C.A</p>
+              </div>
             </div>
             <div class="right-side p-3 d-flex align-items-center ">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus vero architecto voluptatem vitae error commodi. Quasi totam quos obcaecati consequatur vitae architecto labore neque doloribus suscipit nobis quam, similique ducimus?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus vero architecto voluptatem vitae
+                error commodi. Quasi totam quos obcaecati consequatur vitae architecto labore neque doloribus suscipit
+                nobis quam, similique ducimus?</p>
             </div>
+          </div>
         </div>
-    </div>
+        <!-- card 1 end -->
+        <!-- card 2 start -->
+        <div class="container card">
+          <div class="card-body d-flex">
+            <div class="left-side p-3 me-4">
+              <div class="cs-bg p-3">
+                <h6 class="blue-head fw-bold m-0 mb-2">2017 - 2019</h6>
+                <b>SEM Specialists</b>
+                <p class="m-0 mt-0">Wayne Enterprise</p>
+                <p class="m-0 mt-0">Gorthan City, N.Y</p>
+              </div>
+            </div>
+            <div class="right-side p-3 d-flex align-items-center ">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus vero architecto voluptatem vitae
+                error commodi. Quasi totam quos obcaecati consequatur vitae architecto labore neque doloribus suscipit
+                nobis quam, similique ducimus?</p>
+            </div>
+          </div>
+        </div>
+        <!-- card 2 end -->
+      </div>
+      <div class="container p-3">
+        <div class="resume-outer p-4 w-75 mx-auto mt-3">
+          <div class="resume-header d-flex justify-content-between">
+            <h3 class="pink-head fw-bold">Education</h3>
+          </div>
+        </div>
+      </div>
+      <div class="card-container-outer mx-auto custom-width">
+        <!-- card 1 start -->
+        <div class="container card">
+          <div class="card-body d-flex">
+            <div class="left-side p-3 me-4">
+              <div class="cs-bg p-3">
+                <h6 class="pink-head fw-bold m-0 mb-2">2015 - 2017</h6>
+                <b>Oxford University</b>
+                <p>United Kingdom</p>
+                <p class="m-0 mt-0">Master's</p>
+                <p class="m-0 mt-0">Web Development</p>
+              </div>
+            </div>
+            <div class="right-side p-3 d-flex align-items-center ">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus vero architecto voluptatem vitae
+                error commodi. Quasi totam quos obcaecati consequatur vitae architecto labore neque doloribus suscipit
+                nobis quam, similique ducimus?</p>
+            </div>
+          </div>
+        </div>
+        <!-- card 1 end -->
+        <!-- card 2 start -->
+        <div class="container card">
+          <div class="card-body d-flex">
+            <div class="left-side p-3 me-4">
+              <div class="cs-bg p-3">
+                <h6 class="pink-head fw-bold m-0 mb-2">2011 - 2015</h6>
+                <b>ULA</b>
+                <p>Los Angles C.A</p>
+                <p class="m-0 mt-0">Undergraduate</p>
+                <p class="m-0 mt-0">Computer Science</p>
+              </div>
+            </div>
+            <div class="right-side p-3 d-flex align-items-center ">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus vero architecto voluptatem vitae
+                error commodi. Quasi totam quos obcaecati consequatur vitae architecto labore neque doloribus suscipit
+                nobis quam, similique ducimus?</p>
+            </div>
+          </div>
+        </div>
+        <!-- card 2 end -->
+      </div>
+    </section>
+    <section>
+      <div class="card-container-outer mx-auto custom-width mt-5">
+        <div class="container card mt-3">
+          f
+        </div>
+      </div>
     </section>
   </main>
 
-  <footer>
+  <footer class="bg-white pt-2">
     <div class="container p-2 mt-2 d-flex justify-content-between">
       <p>copyright &copy; StartBootstrap - 2024</p>
       <div class="foot-url">
