--- a/resume.html
+++ b/resume.html
@@ -173,10 +173,39 @@
         <!-- card 2 end -->
       </div>
     </section>
-    <section>
-      <div class="card-container-outer mx-auto custom-width mt-5">
-        <div class="container card mt-3">
-          f
+    <section class="mb-4">
+      <div class="card-container-outer mx-auto custom-width mt-5 card">
+        <div class="container mt-3 p-4">
+          <h4 class="cs-design fw-bold mb-4">
+            <i class="fa-solid fa-screwdriver-wrench text-white fs-2"></i>
+            Professional Skills
+          </h4>
+          <div class="d-flex justify-content-between">
+            <span class="mx-3 bg-option py-2 px-3">SEO/SEM Marketing</span>
+            <span class="bg-option py-2 px-3">Statistical Analysis</span>
+            <span class="bg-option py-2 px-3">Web Development</span>
+          </div>
+          <div class="mt-4 d-flex justify-content-between">
+            <span class="mx-3 bg-option py-2 px-3">Network Security</span>
+            <span class="bg-option py-2 px-3">Adobe Software Suite</span>
+            <span class="bg-option py-2 px-3">User Interface Design</span>
+          </div>
+        </div>
+        <div class="container my-2 p-4">
+          <h4 class="cs-design fw-bold mb-4">
+            <i class="fa-solid fa-code text-white fs-2"></i>
+            Languages
+          </h4>
+          <div class="d-flex justify-content-between">
+            <span class="mx-3 bg-option py-2 px-3">HTML</span>
+            <span class="bg-option py-2 px-3">CSS</span>
+            <span class="bg-option py-2 px-3">Javascript</span>
+          </div>
+          <div class="mt-4 d-flex justify-content-between">
+            <span class="mx-3 bg-option py-2 px-3">Python</span>
+            <span class="bg-option py-2 px-3">Java</span>
+            <span class="bg-option py-2 px-3">Node.JS</span>
+          </div>
         </div>
       </div>
     </section>
