--- a/resume.html
+++ b/resume.html
@@ -180,15 +180,15 @@
             <i class="fa-solid fa-screwdriver-wrench text-white fs-2"></i>
             Professional Skills
           </h4>
-          <div class="d-flex justify-content-between">
-            <span class="mx-3 bg-option py-2 px-3">SEO/SEM Marketing</span>
-            <span class="bg-option py-2 px-3">Statistical Analysis</span>
-            <span class="bg-option py-2 px-3">Web Development</span>
+          <div class="row">
+            <p class="mx-3 bg-option py-2 px-3 col">SEO/SEM Marketing</p>
+            <p class="mx-3 bg-option py-2 px-3 col">Statistical Analysis</p>
+            <p class="bg-option py-2 px-3 col">Web Development</p>
           </div>
-          <div class="mt-4 d-flex justify-content-between">
-            <span class="mx-3 bg-option py-2 px-3">Network Security</span>
-            <span class="bg-option py-2 px-3">Adobe Software Suite</span>
-            <span class="bg-option py-2 px-3">User Interface Design</span>
+          <div class="mt-4 row">
+            <p class="mx-3 bg-option py-2 px-3 col">Network Security</p>
+            <p class="mx-3 bg-option py-2 px-3 col">Adobe Software Suite</p>
+            <p class="bg-option py-2 px-3 col">User Interface Design</p>
           </div>
         </div>
         <div class="container my-2 p-4">
@@ -196,15 +196,15 @@
             <i class="fa-solid fa-code text-white fs-2"></i>
             Languages
           </h4>
-          <div class="d-flex justify-content-between">
-            <span class="mx-3 bg-option py-2 px-3">HTML</span>
-            <span class="bg-option py-2 px-3">CSS</span>
-            <span class="bg-option py-2 px-3">Javascript</span>
+          <div class="row">
+            <span class="mx-3 bg-option py-2 px-3 col">HTML</span>
+            <span class="mx-3 bg-option py-2 px-3 col">CSS</span>
+            <span class="bg-option py-2 px-3 col">Javascript</span>
           </div>
-          <div class="mt-4 d-flex justify-content-between">
-            <span class="mx-3 bg-option py-2 px-3">Python</span>
-            <span class="bg-option py-2 px-3">Java</span>
-            <span class="bg-option py-2 px-3">Node.JS</span>
+          <div class="row mt-4">
+            <span class="mx-3 bg-option py-2 px-3 col">Python</span>
+            <span class="mx-3 bg-option py-2 px-3 col">Java</span>
+            <span class="bg-option py-2 px-3 col">Node.JS</span>
           </div>
         </div>
       </div>
