--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page - 1</title>
+  <title>Page - 3</title>
 
   <!-- Project Icon -->
   <link rel="shortcut icon" href="assets/images/logo-2.png" type="image/x-icon">
@@ -30,7 +30,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: rgba(243, 246, 246, 0.78);">
 
   <!-- Header Section Starts -->
   <header class="shadow-sm">
@@ -65,46 +65,45 @@
   <!-- Header Section Ends -->
   <main>
     <section>
-      <div class="d-flex justify-content-center align-items-center vh-100">
-        <div class="container">
-          <div class="row">
-            <!-- Left Div -->
-            <div class="col-md-6 col-sm-12">
-              <div class="p-4">
-                <p class="fw-bold custom-bg">Design Development Marketing</p>
-                <p class="text-dark">I can help your business to</p>
-                <h2 class="cs-design">Get Online and grow fast</h2>
-                <div class="mt-5 row">
-                  <a href="resume.html" class="btn-left col-6 fw-bold text-center rsm-btn">Resume</a>
-                  <button class="btn-right col-6 fw-bold">Projects</button>
+        <div class="card-container-outer mx-auto custom-width">
+          <h1 class="text-center mt-4 cs-design">Projects</h1>  
+          <!-- card 1 start  -->
+          <div class="card mt-4 w-75 mx-auto">
+            <div class="row">
+                <div class="col-8 p-5">
+                    <h3>Project Name 1</h3>
+                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facilis eos autem. Enim ea non dolorum vero, qui, ipsum fugit, nulla velit quidem illo deserunt in vitae nemo nesciunt officiis.</p>
                 </div>
-              </div>
-            </div>
-            <!-- Right Div -->
-            <div class="col-md-6 col-sm-12 text-right">
-              <div class="gradient-box">
-                <img src="./assets/images/profile.png" alt="profile-pic">
-              </div>
+                <div class="col-4 bg-dark d-flex align-items-center justify-content-center cs-rounded">
+                    <h3 class="text-cs-color">300 X 400</h3>
+                </div>
             </div>
           </div>
+          <!-- card 1 ends -->
+          <!-- card 2 starts -->
+          <div class="card mt-4 w-75 mx-auto">
+            <div class="row">
+                <div class="col-8 p-5">
+                    <h3>Project Name 2</h3>
+                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facilis eos autem. Enim ea non dolorum vero, qui, ipsum fugit, nulla velit quidem illo deserunt in vitae nemo nesciunt officiis.</p>
+                </div>
+                <div class="col-4 bg-dark d-flex align-items-center justify-content-center cs-rounded">
+                    <h3 class="text-cs-color">300 X 400</h3>
+                </div>
+            </div>
+          </div>
+          <!-- card 2 end -->
         </div>
-      </div>
-    </section>
-    <section class="bg-custom p-5">
-      <div class="container text-center">
-        <h2 class="cs-design fw-bolder">About Me</h2>
-        <p class="text-dark">My name is StartBootstrap and Grow your business</p>
-        <h6>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid eveniet exercitationem deleniti optio nam, voluptatum ipsam error amet natus sequi assumenda cumque mollitia dolorem sunt quod alias, molestiae aliquam eius?</h6>
-        <div class="icon-section d-flex justify-content-center align-items-center mt-3">
-          <a href="#"><i class="fa-brands fa-twitter me-2 fs-4 cs-design"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram me-2 fs-4 cs-design"></i></a>
-          <a href="https://github.com/jobayer-alam-24" target="_blank"><i class="fa-brands fa-github fs-4 cs-design"></i></a>
+      </section>
+      <section>
+        <div class="container-fluid foot-up mt-5 d-flex flex-column align-items-center justify-content-center">
+            <h1 class="text-white">Let's Build Something Together</h1>
+            <button class="transparent-button mt-2">Contact me</button>
         </div>
-      </div>
-    </section>
+      </section>
   </main>
 
-  <footer>
+  <footer class="bg-white pt-2">
     <div class="container p-2 mt-2 d-flex justify-content-between">
       <p>copyright &copy; StartBootstrap - 2024</p>
       <div class="foot-url">
